<resources>
    <string name="app_name">Find Repo</string>
    <string name="kotlin_json_parser">Kotlin Json parser</string>
    <string name="search">Search</string>
    <string name="project_name">Project Name</string>
    <string name="todo">TODO</string>
</resources>
